<resources>
    <string name="app_name">Reservacion App</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="nombrereservacion">Nombre de Reservacion</string>
    <string name="password">Contraseña</string>
    <string name="date">Fecha</string>
    <string name="hour">Hora</string>
    <string name="generalinformation">Informacion General</string>
    <string name="email">Correo</string>
    <string name="login">Iniciar Sesion</string>
    <string name="numtelefono">Numero Telefonico</string>
    <string name="register">Registrate</string>
    <string name="reservar">Reservar</string>
    <string name="reservarpara">Reservacion para</string>
    <string name="retraso">*Despues de 15 minutos de retraso su reservación será cancelada</string>
    <string name="reservacioninfo">Informacion de Reservacion</string>
    <string name="sign_in">Ingresar</string>
    <string name="inforeservacion">Detalles de Reservacion</string>
    <string name="sign_up">Registrarse</string>
    <string name="logout">Salir</string>
    <string name="type_your_email">Ingresar su correo</string>
    <string name="type_your_password">Ingresar su contraseña</string>
    <string name="or">o</string>
    <string name="name">Nombre</string>
    <string name="type_your_name">Ingresa tu nombre</string>
    <string name="lastname">Apellido</string>
    <string name="type_your_lastname">Ingresa tu apellido</string>
    <string name="error_empty_fields">Error completar campos</string>
    <string name="error_length_pass">La contraseña debe tener una longitud mayor de 8 caracteres</string>
    <string name="msj_reservation1">Se realizo la reservacion</string>
    <string name="msj_reservation2">Error, no se realizo la reservacion</string>
    <string name="user_register">Usuario registrado</string>
    <string name="user_register_fail">Error, correo invalido</string>
    <string name="user_register_fail1">Error, correo ya registrado</string>
    <string name="login_fail">Error datos invalidos</string>
    <string-array name="reservation_example">
        <item>Diego @ 02/02/21</item>
        <item>Diego @ 10/03/21</item>
        <item>Diego @ 18/03/21</item>
    </string-array>

    <string name="home_tab">Inicio</string>
    <string name="profile_tab">Cuenta</string>
    <string name="reservation_tab">Reservaciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_top">Top Fragment</string>
    <string name="create_reservation">Crear Reservacion</string>
    <string name="none_text">----</string>
</resources>